--- a/Week-1/style.css
+++ b/Week-1/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     list-style: none;
     font-family: lato;
+    box-sizing: border-box;
 }
 
 /* body reset */
@@ -23,7 +24,7 @@ body {
     z-index: 2;
 }
 
-.navbar-nav {
+.sidebar {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,7 +34,7 @@ body {
 }
 
 #navbar ul li {
-    margin-top: 50px;
+    margin-top: 35px;
     margin-left: 8px;
     cursor: pointer;
     border-radius: 5px;
@@ -44,7 +45,7 @@ body {
 }
 
 /* Design main content */
-.main-content {
+.main{
     z-index: 1;
     width: 100%;
     height:100%;
@@ -54,47 +55,41 @@ a.white {
     color: white;
 }
 
-.main {
+.main__content {
     display: flex;
     background-color: #454545;
     color: white;
 }
 
-.img {
+.main__content__logo {
     margin: 20px 50px;
 }
 
-#section-chart {
+#main__content__head{
     margin-right: 10px;
     margin-top: 30px;
     display: flex;
     flex-direction: column;
 }
 
-#section-chart2 {
+#main__content__bottom{
     margin-top: auto;
     margin-bottom: 20px;
 }
-.home{
-    display: flex;
-}
-.chartlist{
-    width:100%;
-}
 table {
-    width:92%;
-    margin-left: auto;
-    margin-right:auto;
+    width:85%;
 }
 table tr td {
     padding: 15px
 }
 
-table.even {
+.chartlist {
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-table.even tr:nth-child(2n) {
+.chartlist tr:nth-child(2n) {
     background: #f0f0f0;
 }
 
@@ -108,52 +103,41 @@ table.even tr:nth-child(2n) {
     background-color: #43689b;
     color: white;
     display: flex;
-    margin-top: auto;
+    flex-direction: row;
     height: 10%;
     z-index: 3;
     width: 100vw;
+    vertical-align: baseline;
+    margin-top: auto;
+    
 }
 
-.song {
+.footer__logo {
+    margin: 15px 10px;
+    justify-content: center;
+}
+
+footer div {
+    display: flex;
+}
+
+.footer__songname {
     font-size: 1.1rem;
     justify-content: center;
     margin-top: 1.5rem;
 }
 
-.artist {
+.footer__artistname {
     align-items: left;
     font-size: 1.1rem;
     justify-content: center;
     margin-top: 1.2rem;
 }
 
-.img2 {
-    margin: 15px 10px;
-    justify-content: center;
+/* block for Player controls like forward, backward, pause/play, repeat and shuffle */
+.footer__controls{
+    justify-content: space-around;
+    width: 80%;
+    padding: 40px;
 }
 
-.play {
-    font-size: 1rem;
-    justify-content: center;
-    margin-top: 3rem;
-}
-
-footer div {
-    display: flex;
-}
-#box1{
-    margin-left:200px; 
-    margin-right: 200px;
-}
-#box2{
-    margin-right: 200px
-}
-#box3{
-    margin-right: 200px
-}
-#box4{
-    margin-right: 200px
-}
-#box5{
-    margin-right: 200px
-}
